--- a/submissions/maxovsanyuk/.gitignore
+++ b/submissions/maxovsanyuk/.gitignore
@@ -1,1 +1,21 @@
+# place this file @ ~/
+
+## IDE specific
+.idea/
 .DS_Store
+DS_Store?
+.vscode/
+
+## Building
+node_modules/
+dist/
+.cache
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+## Other
+Desktop.ini
+Thumbs.db
+._*
+tmp/
