--- a/submissions/IrynaY/html5-form/package.json
+++ b/submissions/IrynaY/html5-form/package.json
@@ -14,6 +14,7 @@
     "eslint": "^5.14.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-clean-css": "^4.0.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2"
   }
